# gnuplot-cpp-playground

./: CMakeLists.txt  README.md  local-build.cmd  run.cmd
src/: main.cpp
